--- a/media/kjhealy-print.css
+++ b/media/kjhealy-print.css
@@ -53,62 +53,68 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 10pt;
+	font-size: 8pt;
 	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Verdana,sans-serif;
-	/*margin-top: 1em;
-	margin-left: 1em;*/
+	padding-top: 3em;
+	margin-top: 3em;
+	padding-bottom: 5em;
+	margin-bottom: 5em;
+	margin-left: 1em;
+	margin-right: 5em;
 }
 
 p {
 	position: relative;
-	left: 28%;
-	margin-bottom: 0.2em;
+	margin-left: 25%;
+	margin-bottom: 0.7em;
 	margin-right: 0;
-	width: 70%;
+	width: 65%;
 }
 
 code {
 	font: normal normal;
-	font-size: 60%;
+	font-size: 80%;
 	/*line-height: 1em;*/
 	font-family: Menlo,monospace,sans-serif;
-	color: #ccc;
+	color: #aaa;
 }
 
 p code {
 	position: absolute;
-	left: -11%;
+	left: -15em;
+	text-align: right;
 }
-
 
 ul { 
 	position: relative;
-	left: 28%;
-	width: 65%;
-	margin-bottom: 1em;
-	/*margin-top: -0.5em;*/
+	/* left: 25%;
+	width: 65%; */
+	padding-left: 1.25em;
+	margin-left: 25%;
+	margin-bottom: 1.5em;
+	margin-top: -0.5em;
 }
 
 /*uncomment to get dashes in the list*/
-/*li:before {
-	content: "-";
-	position: relative;
-	left: -0.25em;
-}*/
+li:before {
+	content: "+";
+	position: absolute;
+	margin-left: -1.25em;
+}
 
 li {
 	/*second line indent*/
 	padding-left: 1.25em;
-	text-indent: -1.25em;
+	/*text-indent: -1.25em;*/
 	/*color: #777;*/
 }
 
 li ul {
 	position: relative;
-	left: 0;
-	width: 100%;
+	/* left: 0;
+	width: 100%; */
 	margin-top: 0.25em;
 }
 
@@ -119,11 +125,12 @@ h1,h2,h3,h4 {
 }
 
 h1 {
+	padding-top: 0.5em;
 	text-align: left;
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 28%;
+	margin-left: 25%;
 }
 
 h1+p { 
@@ -136,12 +143,12 @@ h2 {
 	font-size: 1.1em;
 	color: #a00;
 	margin-top: 2em;
+	margin-bottom: 2em;
+	margin-left: 25%;
 	position: relative;
-	top: 1.2em;
-	text-align: right;
-	width: 18%;
+	top: 1.4em;
+	text-align: left;
 }
-
 
 h3 {
 	font-size: 1em;
@@ -165,10 +172,10 @@ a:hover {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 28%;
+	margin-left: 25%;
 	color: #ccc;
 	font-family: Menlo,monospace,sans-serif;
-	font-size: 80%;
+	font-size: 100%;
 }
 
 #webaddress a {
@@ -189,6 +196,17 @@ strong {
 	visibility: hidden;
 }
 
+#headshot {
+	width: 10em;
+	float: left;
+	margin-left: 5%;
+}
 
+#headshot img {
+	width: 90%;
+	height: auto;
+	border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+	box-shadow: 0 0 0 1px #666;
+}
 
 
