--- a/media/kjhealy-screen.css
+++ b/media/kjhealy-screen.css
@@ -57,13 +57,17 @@ body {
 	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Verdana,sans-serif;
-	margin-top: 1em;
+	padding-top: 3em;
+	margin-top: 3em;
+	margin-bottom: 3em;
 	margin-left: 1em;
+	margin-right: 2em;
+	padding-bottom: 3em;
 }
 
 p {
 	position: relative;
-	left: 33%;
+	margin-left: 25%;
 	margin-bottom: 0.7em;
 	margin-right: 0;
 	width: 65%;
@@ -71,7 +75,7 @@ p {
 
 code {
 	font: normal normal;
-	font-size: 60%;
+	font-size: 80%;
 	/*line-height: 1em;*/
 	font-family: Menlo,monospace,sans-serif;
 	color: #aaa;
@@ -79,37 +83,40 @@ code {
 
 p code {
 	position: absolute;
-	left: -14%;
+	left: -15em;
+	text-align: right;
 }
-
 
 ul { 
 	position: relative;
-	left: 33%;
-	width: 65%;
+	/*left: 33%;
+	width: 65%;*/
+	padding-left: 1.25em;
+	margin-left: 25%;
 	margin-bottom: 1.5em;
 	margin-top: -0.5em;
 }
 
 /*uncomment to get dashes in the list*/
-/*li:before {
-	content: "-";
-	position: relative;
-	left: -0.25em;
-}*/
+li:before {
+	content: "+";
+	position: absolute;
+	margin-left: -1.25em;
+}
 
 li {
 	/*second line indent*/
 	padding-left: 1.25em;
-	text-indent: -1.25em;
+	/* text-indent: -1.25em; */
 	/*color: #777;*/
 }
 
 li ul {
 	position: relative;
-	left: 0;
-	width: 100%;
+	/* left: 0;
+	width: 100%; */
 	margin-top: 0.25em;
+	text-indent: 1.25em;
 }
 
 h1,h2,h3,h4 {
@@ -119,11 +126,12 @@ h1,h2,h3,h4 {
 }
 
 h1 {
+	padding-top: 0.5em;
 	text-align: left;
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 33%;
+	margin-left: 25%;
 }
 
 h1+p { 
@@ -135,11 +143,12 @@ h1+p {
 h2 {
 	font-size: 1.1em;
 	color: #a00;
-	margin-top: 3em;
+	margin-top: 2em;
+	margin-bottom: 2em;
+	margin-left: 25%;
 	position: relative;
 	top: 1.4em;
-	text-align: right;
-	width: 20%;
+	text-align: left;
 }
 
 h3 {
@@ -163,10 +172,10 @@ a:hover {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 33%;
+	margin-left: 25%;
 	color: #aaa;
 	font-family: Menlo,monospace,sans-serif;
-	font-size: 80%;
+	font-size: 100%;
 }
 
 #webaddress a {
@@ -186,7 +195,18 @@ strong {
 	display: none;
 }
 
+#headshot {
+	width: 10em;
+	float: left;
+	margin-left: 8%;
+}
 
+#headshot img {
+	width: 90%;
+	height: auto;
+	border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+	box-shadow: 0 0 0 1px #666;
+}
 
 /*
 @media only screen and (max-width: 480px) {
